# SSH-Command-Panel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Include/: Include.hpp
Source/: Main.cpp
